index page code changes and fix blurry phone image

--- a/src/styles/index/hero.module.scss
+++ b/src/styles/index/hero.module.scss
@@ -20,7 +20,7 @@
     }
 
     p {
-      margin: 1.4rem 0 2.4rem;
+      margin: 2rem 0 2.4rem;
       font-weight: 400;
       font-size: 1.5rem;
       line-height: 2.5rem;
@@ -63,7 +63,7 @@
       }
 
       p {
-        margin: 2rem 7rem 1.9rem;
+        margin: 3rem 7rem 1.9rem;
         font-size: 1.6rem;
         line-height: 2.6rem;
       }
@@ -93,7 +93,7 @@
 
       p {
         width: 44.5rem;
-        margin: 1.1rem 0 4rem;
+        margin: 4rem 0;
         font-size: 1.6rem;
         line-height: 2.6rem;
       }
